--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ aliases:
             export PLATFORMS="linux/amd64,linux/arm/v7,linux/arm64"
             export REPO=sjafferali
             export IMAGE_NAME=airprint-bridge
-            export DATE_TAG=$(date '+%Y%m%d')
+            export DATE_TAG=$(date -d '-1 day' '+%Y%m%d')
             if [ "${CIRCLE_BRANCH}" != "master" ]; then export TAG=${TAG}-dev; fi
             docker buildx build --progress plain --platform $PLATFORMS --build-arg \
               UBUNTU_VERSION=<< parameters.ubuntu_version >> -t $REPO/$IMAGE_NAME:<< parameters.ubuntu_version >> \
@@ -80,7 +80,7 @@ aliases:
             export PLATFORMS="linux/amd64,linux/arm/v7,linux/arm64"
             export REPO=sjafferali
             export IMAGE_NAME=airprint-bridge
-            export DATE_TAG=$(date '+%Y%m%d')
+            export DATE_TAG=$(date -d '-1 day' '+%Y%m%d')
             if [ -z "${DOCKER_PASS}" ]; then echo"Skipping push because of missing credentials..."; exit; fi
             if [ "${CIRCLE_BRANCH}" != "master" ]; then export TAG=${TAG}-dev; fi
             echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin &> /dev/null || exit 1
